sampdotnethook/src/a_samp.h

// Gang Zones
PLUGIN_EXPORT int  _samp_GangZoneCreate(float minx, float miny, float maxx, float maxy);
PLUGIN_EXPORT void _samp_GangZoneDestroy(int zone);
PLUGIN_EXPORT void _samp_GangZoneShowForPlayer(int playerid, int zone, unsigned int color);
PLUGIN_EXPORT int  _samp_GangZoneShowForAll(int zone, unsigned int color);
PLUGIN_EXPORT void _samp_GangZoneHideForPlayer(int playerid, int zone);
PLUGIN_EXPORT void _samp_GangZoneHideForAll(int zone);
PLUGIN_EXPORT void _samp_GangZoneFlashForPlayer(int playerid, int zone, unsigned int flashcolor);
PLUGIN_EXPORT void _samp_GangZoneFlashForAll(int zone, unsigned int flashcolor);
PLUGIN_EXPORT void _samp_GangZoneStopFlashForPlayer(int playerid, int zone);
PLUGIN_EXPORT void _samp_GangZoneStopFlashForAll(int zone);
// Global 3D Text Labels
PLUGIN_EXPORT int  _samp_Create3DTextLabel(char* text, int color, float x, float y, float z, float drawdistance, int virtualworld, int testlos=0);
PLUGIN_EXPORT int  _samp_Delete3DTextLabel(int id);
PLUGIN_EXPORT void _samp_Attach3DTextLabelToPlayer(int id, int playerid, float offsetx, float offsety, float offsetz);
PLUGIN_EXPORT void _samp_Attach3DTextLabelToVehicle(int id, int vehicleid, float offsetx, float offsety, float offsetz);
PLUGIN_EXPORT void _samp_Update3DTextLabelText(int id, int color, char* text);
// Per-player 3D Text Labels
PLUGIN_EXPORT int  _samp_CreatePlayer3DTextLabel(int playerid, char* text, int color, float x, float y, float z, float drawdistance, int attachedplayer=INVALID_PLAYER_ID, int attachedvehicle=INVALID_VEHICLE_ID, int testlos=0);
PLUGIN_EXPORT void _samp_DeletePlayer3DTextLabel(int playerid, int id);
PLUGIN_EXPORT void _samp_UpdatePlayer3DTextLabelText(int playerid, int id, int color, char* text);
// Player GUI Dialog
PLUGIN_EXPORT void _samp_ShowPlayerDialog(int playerid, int dialogid, int style, char* caption, char* info, char* button1, char* button2);