sampdotnet/Core/Natives.cs

		
		// Gang Zones
		[DllImport("__Internal", EntryPoint="_samp_GangZoneCreate")]
		public static extern int GangZoneCreate(float minx, float miny, float maxx, float maxy);
		[DllImport("__Internal", EntryPoint="_samp_GangZoneDestroy")]
		public static extern void GangZoneDestroy(int zone);
		[DllImport("__Internal", EntryPoint="_samp_GangZoneShowForPlayer")]
		public static extern void GangZoneShowForPlayer(int playerid, int zone, uint color);
		[DllImport("__Internal", EntryPoint="_samp_GangZoneShowForAll")]
		public static extern int GangZoneShowForAll(int zone, uint color);
		[DllImport("__Internal", EntryPoint="_samp_GangZoneHideForPlayer")]
		public static extern void GangZoneHideForPlayer(int playerid, int zone);
		[DllImport("__Internal", EntryPoint="_samp_GangZoneHideForAll")]
		public static extern void GangZoneHideForAll(int zone);
		[DllImport("__Internal", EntryPoint="_samp_GangZoneFlashForPlayer")]
		public static extern void GangZoneFlashForPlayer(int playerid, int zone, uint flashcolor);
		[DllImport("__Internal", EntryPoint="_samp_GangZoneFlashForAll")]
		public static extern void GangZoneFlashForAll(int zone, uint flashcolor);
		[DllImport("__Internal", EntryPoint="_samp_GangZoneStopFlashForPlayer")]
		public static extern void GangZoneStopFlashForPlayer(int playerid, int zone);
		[DllImport("__Internal", EntryPoint="_samp_GangZoneStopFlashForAll")]
		public static extern void GangZoneStopFlashForAll(int zone);
		
		// Global 3D Text Labels
		[DllImport("__Internal", EntryPoint="_samp_Create3DTextLabel")]
		public static extern int Create3DTextLabel(string text, uint color, float x, float y, float z, float drawdistance, int virtualworld, int testlos=0);
		[DllImport("__Internal", EntryPoint="_samp_Delete3DTextLabel")]
		public static extern int Delete3DTextLabel(int id);
		[DllImport("__Internal", EntryPoint="_samp_Attach3DTextLabelToPlayer")]
		public static extern void Attach3DTextLabelToPlayer(int id, int playerid, float offsetx, float offsety, float offsetz);
		[DllImport("__Internal", EntryPoint="_samp_Attach3DTextLabelToVehicle")]
		public static extern void Attach3DTextLabelToVehicle(int id, int vehicleid, float offsetx, float offsety, float offsetz);
		[DllImport("__Internal", EntryPoint="_samp_Update3DTextLabelText")]
		public static extern void Update3DTextLabelText(int id, uint color, string text);
		
		// Per-player 3D Text Labels
		[DllImport("__Internal", EntryPoint="_samp_CreatePlayer3DTextLabel")]
		public static extern int CreatePlayer3DTextLabel(int playerid, string text, uint color, float x, float y, float z, float drawdistance, int attachedplayer=0xFFFF, int attachedvehicle=0xFFFF, int testlos=0);
		[DllImport("__Internal", EntryPoint="_samp_DeletePlayer3DTextLabel")]
		public static extern void DeletePlayer3DTextLabel(int playerid, int id);
		[DllImport("__Internal", EntryPoint="_samp_UpdatePlayer3DTextLabelText")]
		public static extern void UpdatePlayer3DTextLabelText(int playerid, int id, uint color, string text);

		// Player GUI Dialog
		[DllImport("__Internal", EntryPoint="_samp_ShowPlayerDialog")]
		public static extern void ShowPlayerDialog(int playerid, int dialogid, int style, string caption, string info, string button1, string button2);
		#endregion
		
		// a_players.inc
		#region a_players.inc
		// Player
		[DllImport("__Internal", EntryPoint="_samp_SetSpawnInfo")]
		public static extern void SetSpawnInfo(int playerid, int team, int skin, float x, float y, float z, float rotation, int weapon1, int weapon1_ammo, int weapon2, int weapon2_ammo, int weapon3, int weapon3_ammo);
		[DllImport("__Internal", EntryPoint="_samp_SpawnPlayer")]
		public static extern void SpawnPlayer(int playerid);
